new deploy new design

--- a/front/src/app/globals.css
+++ b/front/src/app/globals.css
@@ -23,3 +23,37 @@ body {
     width: 100%;
   }
 }
+
+.responsive-gradual-width-students {
+  width: 14.5rem;
+}
+
+@media (min-width: 350px) {
+  .responsive-gradual-width-students {
+    width: calc(14.5rem + (100vw - 360px) * 1.0);
+    max-width: 100%;
+  }
+}
+
+@media (min-width: 640px) {
+  .responsive-gradual-width-students {
+    width: 100%;
+  }
+}
+
+.responsive-gradual-width-accounting {
+  width: 16.5rem;
+}
+
+@media (min-width: 350px) {
+  .responsive-gradual-width-accounting {
+    width: calc(16.5rem + (100vw - 360px) * 1.0);
+    max-width: 100%;
+  }
+}
+
+@media (min-width: 640px) {
+  .responsive-gradual-width-accounting {
+    width: 100%;
+  }
+}
